login signp page added

--- a/templates/Register.html
+++ b/templates/Register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LogIn</title>
+    <title>Register</title>
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -28,10 +28,10 @@
                     <input type="text">
                   </div>
                   <div class="fields flex">
-                    <button class="logInBtn">LogIn</button>
+                    <button class="logInBtn">Register</button>
                   </div>
                </form>
-               <p>Don't have an acoount? <a href="#">Register Here</a></p>
+               <p>Already have an account? <a href="#">Login Here</a></p>
             </div>
         </div>
     </section>
