--- a/templates/Register.html
+++ b/templates/Register.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>LogIn</title>
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-<<<<<<< HEAD
+    <link rel="stylesheet" href="style.css" type="text/css">
     <style>
       *{
     margin: 0;
@@ -94,59 +93,37 @@
 .form_fields p a{
     color:rgba(32, 211, 145, 0.396) ;
 }
-
+/* body{
+  background-image: url('./images/clg.png');
+} */
     </style>
-=======
->>>>>>> 312cfa84151d8c9d648c339763dfadd0c9b3d62a
 </head>
 <body>
     <section class="login_container flex">
         <div class="container flex">
-<<<<<<< HEAD
-          <div class="clgimg">
-            <img src="https://images.unsplash.com/photo-1620496009285-ac853df7b9b6?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" >
-        </div>
+            <div class="clgimg">
+                <img src="https://images.unsplash.com/photo-1620496009285-ac853df7b9b6?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" >
+            </div>
             <div class="form_fields ">
-               <form action="/" method="post">
-                  <div class="fields ">
+               <form action="/register" method="post">
+                <div class="fields ">
                     <label for="clgname">College Name:</label>
                     <input type="text" placeholder="Enter College name" name="name">
                   </div>
-                  <div class="fields ">
-                    <label for="clgname">College Email:</label>
-                    <input type="email" placeholder="Enter Email" name="email">
-                  </div>
-                  <div class="fields ">
-                    <label for="clgname">College Password:</label>
-                    <input type="text" placeholder="Enter password" name="password">
-=======
-            <div class="clgimg">
-                <img src="./images/clg.png" alt="iit">
-            </div>
-            <div class="form_fields ">
-               <form action="#">
-                  <div class="fields ">
-                    <label for="clgname">Clg Name:</label>
-                    <input type="text">
-                  </div>
-                  <div class="fields ">
-                    <label for="clgname">Clg Name:</label>
-                    <input type="text">
-                  </div>
-                  <div class="fields ">
-                    <label for="clgname">Clg Name:</label>
-                    <input type="text">
->>>>>>> 312cfa84151d8c9d648c339763dfadd0c9b3d62a
-                  </div>
+                <div class="fields ">
+                  <label for="clgname">College Email:</label>
+                  <input type="email" name="email">
+                </div>
+                <div class="fields ">
+                  <label for="clgname">College Password:</label>
+                  <input type="text" name="password">
+                </div>
+
                   <div class="fields flex">
-                    <button class="logInBtn">Register</button>
+                    <button class="logInBtn">LogIn</button>
                   </div>
                </form>
-<<<<<<< HEAD
-               <p>Already have an account?<a href="/login">Login Here</a></p>
-=======
-               <p>Already have an account? <a href="#">Login Here</a></p>
->>>>>>> 312cfa84151d8c9d648c339763dfadd0c9b3d62a
+               <p>Don't have an acoount? <a href="/login">Register Here</a></p>
             </div>
         </div>
     </section>
